Refactor for v3